--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,7 @@
           {{ form.username(class_="form-control", autofocus=true, placeholder="Username") }}
           <br>
           {{ form.password(class_="form-control", placeholder="Password") }}
-          <button class="btn btn-lg btn-primary btn-block" type="submit" style="background-color:grey;border-color:black">Sign in</button>
+          <button class="btn btn-lg btn-primary btn-block" type="submit" style="background:grey;border-color:black">Sign in</button>
         </form>
     </div> <!-- /container -->
 
