--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li style="color:grey"><a>Logged in as {{ username }}</a></li>
-            <li style="color:grey"><a href="#">Log out</a></li>
+            <li style="color:grey"><a href="logout">Log out</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
